adding windows hotstrings

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"shared_json": "", "local_json": ""}
+{"shared": "/home/whenti/Dropbox/autres/data", "local": "/home/whenti/Documents/macros/pyq/data"}
